syntax = "proto3";

package user;

// The UserService definition.
service UserService {
  // Creates a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}

  // Retrieves a user by ID
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
}

// Request to create a new user
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

// Request to get a user by ID
message GetUserRequest {
  string id = 1;
}

// Response containing user details
message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
